--- a/src/UI/Blazor/Modules/Task/Components/Task.razor
+++ b/src/UI/Blazor/Modules/Task/Components/Task.razor
@@ -1,14 +1,21 @@
 ﻿@page "/task-list"
 @using Microsoft.AspNetCore.Authorization
+@using Starter.Blazor.Core.Response
 @using Starter.Blazor.Modules.Common
 @using Starter.Blazor.Modules.Login.Services
 @using Starter.Blazor.Modules.Task.Model
 @using Starter.Blazor.Modules.Task.Services
+@using DataTables.AspNet;
+@using Blazored.Modal
+@using Blazored.Modal.Services
+@using System.Collections.Generic;
 @inject IJSRuntime JSRuntime
 @inject NavigationManager navigationManager
 @inject IAuthService AuthService
 @inject ITaskService TaskService
+@inject IModalService TaskModal
 @attribute [Authorize]
+@inject IJSRuntime JSRuntime
 
 <div>
     <div class="relative flex h-full gap-5 sm:h-[calc(100vh_-_150px)]">
@@ -17,7 +24,7 @@
                 <div class="flex w-full flex-col gap-4 p-4 sm:flex-row sm:items-center">
                     <div class="flex items-center ltr:mr-3 rtl:ml-3">
                         <div class="group relative flex-1 mr-3">
-                            <button class="btn btn-primary w-full" type="button" @onclick="@(() => Modal.Show<CreateTaskModel>("Add New Task"))">
+                            <button class="btn btn-primary w-full" type="button" @onclick="AddTask">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5 shrink-0 ltr:mr-2 rtl:ml-2">
                                     <line x1="12" y1="5" x2="12" y2="19"></line>
                                     <line x1="5" y1="12" x2="19" y2="12"></line>
@@ -93,7 +100,6 @@
                                 <th>Description</th>
                                 <th>Start Date</th>
                                 <th>End Date</th>
-                                <th>Assigned To</th>
                                 <th class="ltr:rounded-r-md rtl:rounded-l-md">Action</th>
                             </tr>
                         </thead>
@@ -107,11 +113,22 @@
                                     <td class="text-dark">@TaskData.Description</td>
                                     <td class="text-dark">@TaskData.StartDate</td>
                                     <td class="text-dark">@TaskData.EndDate</td>
-                                    <td class="text-dark">@TaskData.AssignedTo</td>
                                     <td>
                                         <div>
-                                            <button @onclick="() => EditTask(TaskData)">Edit</button> |
-                                            <button @onclick="() => DeleteTask(TaskData)">Delete</button>
+                                            <button @onclick="() => EditTask(TaskData)">
+                                                <svg width="17" height="17" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M11.4001 18.1612L11.4001 18.1612L18.796 10.7653C17.7894 10.3464 16.5972 9.6582 15.4697 8.53068C14.342 7.40298 13.6537 6.21058 13.2348 5.2039L5.83882 12.5999L5.83879 12.5999C5.26166 13.1771 4.97307 13.4657 4.7249 13.7838C4.43213 14.1592 4.18114 14.5653 3.97634 14.995C3.80273 15.3593 3.67368 15.7465 3.41556 16.5208L2.05445 20.6042C1.92743 20.9852 2.0266 21.4053 2.31063 21.6894C2.59466 21.9734 3.01478 22.0726 3.39584 21.9456L7.47918 20.5844C8.25351 20.3263 8.6407 20.1973 9.00498 20.0237C9.43469 19.8189 9.84082 19.5679 10.2162 19.2751C10.5343 19.0269 10.823 18.7383 11.4001 18.1612Z" fill="currentColor"></path>
+                                                    <path d="M20.8482 8.71306C22.3839 7.17735 22.3839 4.68748 20.8482 3.15178C19.3125 1.61607 16.8226 1.61607 15.2869 3.15178L14.3999 4.03882C14.4121 4.0755 14.4246 4.11268 14.4377 4.15035C14.7628 5.0875 15.3763 6.31601 16.5303 7.47002C17.6843 8.62403 18.9128 9.23749 19.85 9.56262C19.8875 9.57563 19.9245 9.58817 19.961 9.60026L20.8482 8.71306Z" fill="currentColor"></path>
+                                                </svg>
+                                            </button> |
+                                            <button @onclick="() => DeleteTask(TaskData)">
+                                                <svg width="17" height="17" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path opacity="0.5" d="M11.5956 22.0001H12.4044C15.1871 22.0001 16.5785 22.0001 17.4831 21.1142C18.3878 20.2283 18.4803 18.7751 18.6654 15.8686L18.9321 11.6807C19.0326 10.1037 19.0828 9.31524 18.6289 8.81558C18.1751 8.31592 17.4087 8.31592 15.876 8.31592H8.12405C6.59127 8.31592 5.82488 8.31592 5.37105 8.81558C4.91722 9.31524 4.96744 10.1037 5.06788 11.6807L5.33459 15.8686C5.5197 18.7751 5.61225 20.2283 6.51689 21.1142C7.42153 22.0001 8.81289 22.0001 11.5956 22.0001Z" fill="currentColor"></path>
+                                                    <path d="M3 6.38597C3 5.90152 3.34538 5.50879 3.77143 5.50879L6.43567 5.50832C6.96502 5.49306 7.43202 5.11033 7.61214 4.54412C7.61688 4.52923 7.62232 4.51087 7.64185 4.44424L7.75665 4.05256C7.8269 3.81241 7.8881 3.60318 7.97375 3.41617C8.31209 2.67736 8.93808 2.16432 9.66147 2.03297C9.84457 1.99972 10.0385 1.99986 10.2611 2.00002H13.7391C13.9617 1.99986 14.1556 1.99972 14.3387 2.03297C15.0621 2.16432 15.6881 2.67736 16.0264 3.41617C16.1121 3.60318 16.1733 3.81241 16.2435 4.05256L16.3583 4.44424C16.3778 4.51087 16.3833 4.52923 16.388 4.54412C16.5682 5.11033 17.1278 5.49353 17.6571 5.50879H20.2286C20.6546 5.50879 21 5.90152 21 6.38597C21 6.87043 20.6546 7.26316 20.2286 7.26316H3.77143C3.34538 7.26316 3 6.87043 3 6.38597Z" fill="currentColor"></path>
+                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.42543 11.4815C9.83759 11.4381 10.2051 11.7547 10.2463 12.1885L10.7463 17.4517C10.7875 17.8855 10.4868 18.2724 10.0747 18.3158C9.66253 18.3592 9.29499 18.0426 9.25378 17.6088L8.75378 12.3456C8.71256 11.9118 9.01327 11.5249 9.42543 11.4815Z" fill="currentColor"></path>
+                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14.5747 11.4815C14.9868 11.5249 15.2875 11.9118 15.2463 12.3456L14.7463 17.6088C14.7051 18.0426 14.3376 18.3592 13.9254 18.3158C13.5133 18.2724 13.2126 17.8855 13.2538 17.4517L13.7538 12.1885C13.795 11.7547 14.1625 11.4381 14.5747 11.4815Z" fill="currentColor"></path>
+                                                </svg>
+                                            </button>
                                         </div>
                                     </td>
                                 </tr>
@@ -124,24 +141,12 @@
     </div>
 </div>
 
-@* <CascadingValue Value="@EditTaskID">
-    <CreateTaskModel />
-</CascadingValue> *@
-
 @code {
-
-    [CascadingParameter] public IModalService Modal { get; set; }
+    [CascadingParameter] public IModalService Modal { get; set; } = default;
 
     private bool isAuthenticated;
 
-    private List<TaskListDto> Tasks = new List<TaskListDto>();
-    public Guid EditTaskID;
-
-    private TaskDetailsDto taskDetailsDto = new TaskDetailsDto
-        {
-            StartDate = DateTime.Now.Date,
-            EndDate = DateTime.Now.Date
-        };
+    public List<TaskListDto> Tasks = new List<TaskListDto>();
 
     private PaginationRequest param = new PaginationRequest { PageNumber = 0, PageSize = 10, OrderBy = new[] { "TaskName" } };
 
@@ -154,40 +159,12 @@
             navigationManager.NavigateTo("/");
         }
 
-        // get Tasks
-
         Tasks = await TaskService.GetTasklistsAsync(param);
 
     }
 
-    private async void EditTask(TaskListDto selectedTask)
-    {
-        try
-        {
-            EditTaskID = selectedTask.Id;
-            //Modal.Show<CreateTaskModel>("Edit Task");
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine($"Error: {ex.Message}");
-        }
-    }
-
     private async void DeleteTask(TaskListDto task)
     {
-        // var parameters = new ModalParameters();
-        // parameters.Add("TaskName", task.TaskName);
-
-        // var result = await BlazoredModal.Show<ConfirmDeleteModal>("Confirm Delete", parameters);
-        // if (result.Cancelled)
-        // {
-        //     Console.WriteLine("Delete operation canceled");
-        // }
-        // else if (result.Data is bool confirmed && confirmed)
-        // {
-        //     Console.WriteLine("Delete operation confirmed");
-        // }
-
         var confirmed = await JSRuntime.InvokeAsync<bool>("confirm", $"Are you sure you want to delete '{task.TaskName}'?");
 
         if (confirmed)
@@ -195,6 +172,42 @@
             await TaskService.DeleteTaskAsync(task.Id);
 
             Tasks.Remove(task);
+            StateHasChanged();
+        }
+    }
+
+    private async Task<ModalParameters> GetCommonModalParametersAsync()
+    {
+        var projectList = await TaskService.GetProjectlistsAsync();
+        var StatusList = await TaskService.GetStatuslistsAsync();
+        var PriorityList = await TaskService.GetPrioritylistsAsync();
+        var AssigneeList = await TaskService.GetAssigneeListAsync();
+
+        return new ModalParameters
+        {
+            { nameof(CreateTaskModel.projectList), projectList },
+            { nameof(CreateTaskModel.StatusList), StatusList },
+            { nameof(CreateTaskModel.PriorityList), PriorityList },
+            { nameof(CreateTaskModel.AssigneeList), AssigneeList },
+        };
+    }
+
+    private async void AddTask()
+    {
+        var modalParameters = await GetCommonModalParametersAsync();
+
+        Modal.Show<CreateTaskModel>("Add New Task", modalParameters);
+    }
+
+    private async void EditTask(TaskListDto selectedTask)
+    {
+        var TaskDetails = await TaskService.GetTaskDetails(selectedTask.Id);
+        if (TaskDetails.Success == true)
+        {
+            var modalParameters = await GetCommonModalParametersAsync();
+            modalParameters.Add(nameof(CreateTaskModel.TaskDetails), TaskDetails.Data);
+
+            Modal.Show<CreateTaskModel>("Edit Task", modalParameters);
         }
     }
 }
