--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -108,8 +108,8 @@
         }
     }
 
-    public void Dispose()
-    {
-        Interceptor.DisposeEvent();
-    }
+    // public void Dispose()
+    // {
+    //     Interceptor.DisposeEvent();
+    // }
 }
