Solve accept-invite error and change project endpoints

--- a/src/UI/Blazor/Modules/User/Pages/UserRegister.razor
+++ b/src/UI/Blazor/Modules/User/Pages/UserRegister.razor
@@ -1,4 +1,5 @@
 ﻿@page "/accept-invite"
+@attribute [AllowAnonymous]
 @using Starter.Blazor.Modules.User.Models
 @using Starter.Blazor.Modules.User.Services
 @inject IUserService UserService
