--- a/src/UI/Blazor/Modules/User/Pages/User.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User.razor
@@ -11,7 +11,7 @@
 <div x-data="modal">
     <div class="panel h-full w-full">
         <div class="mb-5 flex items-center justify-between">
-            <h5 class="text-lg font-semibold dark:text-white-light">Users List</h5>
+            <h5 class="text-lg font-semibold dark:text-white-light">Users</h5>
 
             <button type="button" class="btn btn-primary" @onclick="ToggleModal">Invite User</button>
 
