--- a/src/UI/Blazor/Modules/Task/Components/Task.razor
+++ b/src/UI/Blazor/Modules/Task/Components/Task.razor
@@ -21,82 +21,13 @@
 @inject IJSRuntime JSRuntime
 @inject IModalService ModalService
 
-<div>
-    <div class="relative flex h-full gap-5 sm:h-[calc(100vh_-_150px)]">
-        <div class="panel h-full flex-1 overflow-auto p-0">
-            <div class="flex h-full flex-col">
-                <div class="flex w-full flex-col gap-4 p-4 sm:flex-row sm:items-center">
-                    <div class="flex items-center ltr:mr-3 rtl:ml-3">
-                        <div class="group relative flex-1 mr-3">
-                            <button class="btn btn-primary w-full" type="button" @onclick="AddTask">
-                                Create New Task
-                            </button>
-                        </div>
-                        <button type="button"
-                                class="block hover:text-primary ltr:mr-3 rtl:ml-3 xl:hidden"
-                                @click="isShowTaskMenu = !isShowTaskMenu">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6">
-                                <path d="M20 7L4 7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
-                                <path opacity="0.5" d="M20 12L4 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
-                                <path d="M20 17L4 17" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
-                            </svg>
-                        </button>
-                        <div class="group relative flex-1">
-                            <input type="text"
-                                   class="peer form-input ltr:!pr-10 rtl:!pl-10"
-                                   placeholder="Search Task..." />
-                            <div class="absolute top-1/2 -translate-y-1/2 peer-focus:text-primary ltr:right-[11px] rtl:left-[11px]">
-                                <svg width="24"
-                                     height="24"
-                                     viewBox="0 0 24 24"
-                                     fill="none"
-                                     xmlns="http://www.w3.org/2000/svg"
-                                     class="h-4 w-4">
-                                    <circle cx="11.5" cy="11.5" r="9.5" stroke="currentColor" stroke-width="1.5" opacity="0.5"></circle>
-                                    <path d="M18.5 18.5L22 22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
-                                </svg>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="flex flex-1 items-center justify-center sm:flex-auto sm:justify-end">
-                        <p class="ltr:mr-3 rtl:ml-3"></p>
-                        <button type="button"
-                                class="rounded-md bg-[#f4f4f4] p-1 enabled:hover:bg-primary-light disabled:cursor-not-allowed disabled:opacity-60 ltr:mr-3 rtl:ml-3 dark:bg-white-dark/20 enabled:dark:hover:bg-white-dark/30">
-                            <svg width="24"
-                                 height="24"
-                                 viewBox="0 0 24 24"
-                                 fill="none"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 class="h-5 w-5 rtl:rotate-180">
-                                <path d="M15 5L9 12L15 19"
-                                      stroke="currentColor"
-                                      stroke-width="1.5"
-                                      stroke-linecap="round"
-                                      stroke-linejoin="round"></path>
-                            </svg>
-                        </button>
-                        <button type="button"
-                                class="rounded-md bg-[#f4f4f4] p-1 enabled:hover:bg-primary-light disabled:cursor-not-allowed disabled:opacity-60 dark:bg-white-dark/20 enabled:dark:hover:bg-white-dark/30">
-                            <svg width="24"
-                                 height="24"
-                                 viewBox="0 0 24 24"
-                                 fill="none"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 class="h-5 w-5 ltr:rotate-180">
-                                <path d="M15 5L9 12L15 19"
-                                      stroke="currentColor"
-                                      stroke-width="1.5"
-                                      stroke-linecap="round"
-                                      stroke-linejoin="round"></path>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-                <div class="table-responsive">
-                    <ReusableGrid @ref="gridRef" TItem="TaskListDto" HeaderData="@headerInfo" PageSizeChange="LoadData" PageNumberChange="LoadData" ColumnSortingChange="LoadData" DeleteRecord="DeleteRecord" EditRecord="EditRecord" />
-                </div>
-            </div>
-        </div>
+<div class="panel h-full w-full">
+    <div class="mb-5 flex items-center justify-between">
+        <h5 class="text-lg font-semibold dark:text-white-light">Tasks</h5>
+        <button type="button" class="btn btn-primary" @onclick="AddTask">Create Task</button>
+    </div>
+    <div class="table-responsive">
+        <ReusableGrid @ref="gridRef" TItem="TaskListDto" HeaderData="@headerInfo" PageSizeChange="LoadData" PageNumberChange="LoadData" ColumnSortingChange="LoadData" DeleteRecord="DeleteRecord" EditRecord="EditRecord" />
     </div>
 </div>
 
