Added disable button in User page

--- a/src/UI/Blazor/Modules/Projects/Components/Project.razor
+++ b/src/UI/Blazor/Modules/Projects/Components/Project.razor
@@ -134,6 +134,7 @@
 
     protected override void OnInitialized()
     {
+        _httpInterceptor.RegisterEvent();
         Task.WhenAll(LoadData(1, 5, null));
     }
     private async Task PageSizeChanged(int pageNumber, int pageSize, string[] OrderBy)
