--- a/src/UI/Blazor/App.razor
+++ b/src/UI/Blazor/App.razor
@@ -1,7 +1,7 @@
 ﻿@using Starter.Blazor.Layout.Pagenotfound
 @using Starter.Blazor.Layout.Public
 <CascadingAuthenticationState>
-    <CascadingBlazoredModal DisableBackgroundCancel="true">
+    <CascadingBlazoredModal DisableBackgroundCancel="true" HideCloseButton="true">
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
                 <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
@@ -15,7 +15,6 @@
             </Found>
             <NotFound>
                 <LayoutView Layout="@typeof(AuthLayout)">
-                   @* <PageNotFound></PageNotFound> *@
                     <p>Sorry, there's nothing at this address.</p>
                 </LayoutView>
             </NotFound>
